--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,7 @@
    "id": "4d0554fb-5011-4f39-b92e-815c50a626c7",
    "metadata": {},
    "source": [
-    "## Ignore Checks\n",
+    "## Ignoring Checks\n",
     "\n",
     "You may wish to ignore checks on individual files, there are two ways to do this (1) Through a special front-matter field called `mdseo-ignore` or (2) by placing the word `mdseo-ignore-all` in your markdown file.\n",
     "\n",
