--- a/core.ipynb
+++ b/core.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "from fastcore.utils import globtastic, Path, merge, L\n",
+    "from fastcore.all import globtastic, Path, merge, L\n",
     "from fastcore.script import call_parse\n",
     "import re\n",
     "import yaml\n",
