--- a/index.ipynb
+++ b/index.ipynb
@@ -7,7 +7,10 @@
    "source": [
     "# mdseo\n",
     "\n",
-    "> Analyze Markdown Documents Used In Static Sites For SEO"
+    "> Analyze Markdown Documents Used In Static Sites For SEO\n",
+    "\n",
+    "\n",
+    "[![CI](https://github.com/outerbounds/mdseo/actions/workflows/main.yml/badge.svg)](https://github.com/outerbounds/mdseo/actions/workflows/main.yml)"
    ]
   },
   {
