--- a/index.ipynb
+++ b/index.ipynb
@@ -7,9 +7,14 @@
    "source": [
     "# mdseo\n",
     "\n",
-    "> Analyze Markdown Documents Used In Static Sites For SEO\n",
-    "\n",
-    "\n",
+    "> Analyze Markdown Documents Used In Static Sites For SEO\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9451daf9-f0ad-4b6b-8fac-1ab68e1c2d7a",
+   "metadata": {},
+   "source": [
     "[![CI](https://github.com/outerbounds/mdseo/actions/workflows/main.yml/badge.svg)](https://github.com/outerbounds/mdseo/actions/workflows/main.yml)"
    ]
   },
