add default for n words

--- a/core.ipynb
+++ b/core.ipynb
@@ -271,7 +271,7 @@
     "    return d['n_words'] < n\n",
     "\n",
     "@call_parse\n",
-    "def chk_len(n:int, # minimum number of words a document should contain\n",
+    "def chk_len(n:int=50, # minimum number of words a document should contain\n",
     "            srcdir:str='.', # directory of files to check \n",
     "           ):\n",
     "    \"Check if docs contain less than `n` words. Ignore with front matter `mdseo-ignore: [length]`\"\n",
@@ -312,6 +312,14 @@
     "    func = partial(_desc_len, lower=n_lower, upper=n_upper)\n",
     "    return _checker(func, f\"have a description that is not between {n_lower} and {n_upper} characters\", srcdir)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04ef0e7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
