--- a/core.ipynb
+++ b/core.ipynb
@@ -97,7 +97,7 @@
     "        {'fname': 'test_files/front_matter_test_docs.md',\n",
     "         'n_words': 2,\n",
     "         'key2': 'value2',\n",
-    "         'slug': 'custom/pathfor/site',\n",
+    "         'slug': 'custom/pathfor/site/this-is-waytoolong/wedontwantthis',\n",
     "         'key': 'value',\n",
     "         'mdseo-ignore': []}\n",
     "       )"
@@ -227,6 +227,65 @@
    "outputs": [],
    "source": [
     "test_fail(chk_desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ebe93393-6fa9-40f7-a0ec-80c49dc8a7bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def _has_no_slug(d): \n",
+    "    if 'slug' in d['mdseo-ignore']: return False\n",
+    "    else: return 'slug' not in d\n",
+    "\n",
+    "@call_parse\n",
+    "def chk_slug(srcdir:str='.', # directory of files to check\n",
+    "            ):\n",
+    "    \"Check if docs do not have the field `slug` in their front matter. Ignore with front matter `mdseo-ignore: [slug]`\"\n",
+    "    return _checker(_has_no_slug, \"do not have the field `slug` in their front matter\", srcdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe9a78b3-42c6-464e-bd02-0c09b3c9cd1c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_fail(chk_slug)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d53374c5-c0ca-4f36-947b-1c7fc28115be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def _slug_len(d, n): \n",
+    "    if 'slug' in d['mdseo-ignore']: return False\n",
+    "    else: return len(d.get('slug', '')) > n\n",
+    "\n",
+    "@call_parse\n",
+    "def chk_slug_len(srcdir:str='.', # directory of files to check\n",
+    "                 n=45 # max number of characters for slug\n",
+    "            ):\n",
+    "    \"Check if docs have a `slug` field in their front matter that is less than `n` characters. Ignore with front matter `mdseo-ignore: [slug]`\"\n",
+    "    return _checker(partial(_slug_len, n=n), f\"have `slug` in their front matter that is greater than {n} characters\", srcdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbc20a60-fe8d-4a86-9a5c-5b9093cf8a7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_fail(chk_slug_len)"
    ]
   },
   {
