--- a/index.ipynb
+++ b/index.ipynb
@@ -149,6 +149,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fde979e4-3b15-4f4e-b7d1-b73ff62b1286",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: mdseo_slug [-h] [--srcdir SRCDIR]\n",
+      "\n",
+      "Check if docs do not have the field `slug` in their front matter. Ignore with\n",
+      "front matter `mdseo-ignore: [slug]`\n",
+      "\n",
+      "optional arguments:\n",
+      "  -h, --help       show this help message and exit\n",
+      "  --srcdir SRCDIR  directory of files to check (default: .)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mdseo_slug -h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3519503-d647-4880-bde4-f8ce4b833081",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: mdseo_slug_len [-h] [--srcdir SRCDIR] [--n N]\n",
+      "\n",
+      "Check if docs have a `slug` field in their front matter that is less than `n`\n",
+      "characters. Ignore with front matter `mdseo-ignore: [slug]`\n",
+      "\n",
+      "optional arguments:\n",
+      "  -h, --help       show this help message and exit\n",
+      "  --srcdir SRCDIR  directory of files to check (default: .)\n",
+      "  --n N            max number of characters for slug (default: 45)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mdseo_slug_len -h"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4d0554fb-5011-4f39-b92e-815c50a626c7",
    "metadata": {},
