--- a/core.ipynb
+++ b/core.ipynb
@@ -304,7 +304,7 @@
     "def chk_img(srcdir:str='.', # directory of files to check\n",
     "            ):\n",
     "    \"Check if docs do not have the field `image` in their front matter. Ignore with front matter `mdseo-ignore: [image]`\"\n",
-    "    return _checker(_has_no_img, \"do not have the image `description` in their front matter\", srcdir)"
+    "    return _checker(_has_no_img, \"do not have the field `image` in their front matter\", srcdir)"
    ]
   },
   {
@@ -315,6 +315,35 @@
    "outputs": [],
    "source": [
     "test_fail(chk_img)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de9ab18e-e57e-4fcf-8177-84dd2fd2932e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def _has_no_author(d): \n",
+    "    if 'authors' in d['mdseo-ignore'] or 'author' in d['mdseo-ignore']: return False\n",
+    "    return 'authors' not in d\n",
+    "\n",
+    "@call_parse\n",
+    "def chk_author(srcdir:str='.', # directory of files to check\n",
+    "            ):\n",
+    "    \"Check if docs do not have the field `authors` in their front matter. Ignore with front matter `mdseo-ignore: [authors]`\"\n",
+    "    return _checker(_has_no_img, \"do not have the field `authors` in their front matter\", srcdir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f6a2ee9-8971-40e9-b2a1-b8b475745a24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_fail(chk_author)"
    ]
   },
   {
