--- a/index.ipynb
+++ b/index.ipynb
@@ -209,6 +209,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e573a509-0a82-42fc-a13e-4e17e1c05f9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "usage: mdseo_author [-h] [--srcdir SRCDIR]\n",
+      "\n",
+      "Check if docs do not have the field `authors` in their front matter. Ignore with\n",
+      "front matter `mdseo-ignore: [authors]`\n",
+      "\n",
+      "optional arguments:\n",
+      "  -h, --help       show this help message and exit\n",
+      "  --srcdir SRCDIR  directory of files to check (default: .)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mdseo_author -h"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4d0554fb-5011-4f39-b92e-815c50a626c7",
    "metadata": {},
