--- a/core.ipynb
+++ b/core.ipynb
@@ -27,7 +27,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "from fastcore.all import globtastic, Path, merge, L\n",
+    "from fastcore.all import globtastic, Path, merge, L, AttrDict, str_enum\n",
     "from fastcore.script import call_parse\n",
     "import re\n",
     "import yaml\n",
@@ -83,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert get_meta('test_files/front_matter2.md')['mdseo-ignore'] == ['title', 'body', 'slug', 'desc']"
+    "assert get_meta('test_files/front_matter2.md')['mdseo-ignore'] == ['title', 'body', 'desc']"
    ]
   },
   {
@@ -189,11 +189,91 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ddbf81c-cf93-4fee-a17a-d04a9b18ac46",
+   "id": "5739af98-e915-4fe1-846f-2b6dfd28f34b",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
+    "fm_map = {'description':['desc', 'description'],\n",
+    "          'slug': ['slug'],\n",
+    "          'image': ['image', 'img'],\n",
+    "          'authors': ['authors', 'author']}\n",
+    "_en = str_enum('_en', *fm_map.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4804019-535d-4076-ac15-5129a34d78ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def _intersect(d, key): return set(d['mdseo-ignore']).intersection(set(fm_map[key]))\n",
+    "\n",
+    "def _missing_fm(d, key):\n",
+    "    if _intersect(d, key): return False\n",
+    "    else: return key not in d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41096e3d-0988-456c-8897-e3de5443818f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fname': 'test_files/front_matter2.md',\n",
+       " 'n_words': 0,\n",
+       " 'key2': 'value2',\n",
+       " 'slug': 'custom/pathfor/site',\n",
+       " 'key': 'value',\n",
+       " 'title': 'a title is here',\n",
+       " 'mdseo-ignore': ['title', 'body', 'desc']}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "_test_fm = get_meta('test_files/front_matter2.md')\n",
+    "_test_fm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c522922d-f735-4709-a3ec-ac724eec23c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "assert _intersect(_test_fm, 'description')\n",
+    "assert not _missing_fm(_test_fm, 'description') # this is in mdseo-ignore so its not considered missing\n",
+    "assert _missing_fm(_test_fm, 'authors')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3fa3ad7b-5b33-4006-a986-8b371f031a1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def _min_len_err(d, key, n):\n",
+    "    if _intersect(d, key): return False\n",
+    "    else: return key in d and len(d['key']) < n # return true if it is less than n length\n",
+    "\n",
+    "def _max_len_err(d, key, n):\n",
+    "    if _intersect(d, key): return False\n",
+    "    else: return key in d  and len(d.get(key, '')) > n #return true if greater than n length\n",
+    "\n",
     "def _checker(func, msg:str, srcdir:str):\n",
     "    fnames = meta_list(srcdir).filter(func).attrgot('fname')\n",
     "    files = '\\n\\t'.join(fnames)\n",
@@ -203,147 +283,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e335555d-979d-44b9-87fe-5c2ce5b20203",
+   "id": "2510d524-290e-44e9-b02e-3b6577f7195e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert not _min_len_err(_test_fm, 'description', 10000) #this is in mdeseo-ignore so rule is ignored\n",
+    "assert not _min_len_err(_test_fm, 'image', 10) # this key doesn't exist\n",
+    "\n",
+    "assert len(_test_fm['slug']) == 19\n",
+    "\n",
+    "assert _min_len_err(_test_fm, 'slug', 500) # 50 > 5\n",
+    "assert _max_len_err(_test_fm, 'slug', 5) # 19 > 5\n",
+    "\n",
+    "\n",
+    "assert not _min_len_err(_test_fm, 'slug', 5)\n",
+    "assert not _max_len_err(_test_fm, 'slug', 39)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf130cc9-3fb3-4010-b8ac-1d317bb47d64",
    "metadata": {},
    "outputs": [],
    "source": [
     "#export\n",
-    "def _has_no_desc(d): \n",
-    "    if 'description' in d['mdseo-ignore'] or 'desc' in d['mdseo-ignore']: return False\n",
-    "    else: return 'description' not in d\n",
-    "\n",
     "@call_parse\n",
-    "def chk_desc(srcdir:str='.', # directory of files to check\n",
-    "            ):\n",
-    "    \"Check if docs do not have the field `description` in their front matter. Ignore with front matter `mdseo-ignore: [description]`\"\n",
-    "    return _checker(_has_no_desc, \"do not have the field `description` in their front matter\", srcdir)\n"
+    "def chk_fm(key:_en, # front matter field to check\n",
+    "           srcdir:str='.', # directory of files to check\n",
+    "           minlen:int=None, #the minimum character length allowed for the field\n",
+    "           maxlen:int=None  #the maximum character length allowed for the field\n",
+    "          ):\n",
+    "    \"Check front matter for various rules.\"\n",
+    "    if key not in fm_map: raise Exception(f'No rule exists for {key}')\n",
+    "    if minlen:\n",
+    "        return _checker(partial(_min_len_err, key=key, n=minlen), \n",
+    "                        f\"have the field `{key}` in their front matter that is less than {minlen} characters\", srcdir)\n",
+    "    elif maxlen:\n",
+    "        return _checker(partial(_max_len_err, key=key, n=maxlen), \n",
+    "                        f\"have the field `{key}` in their front matter that is greater than {maxlen} characters\", srcdir)\n",
+    "    \n",
+    "    else: _checker(partial(_missing_fm, key=key), f\"do not have the field `{key}` in their front matter\", srcdir)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca58e902-88b6-474d-8cc6-91eb61f71d78",
+   "id": "339938b2-4b2f-4818-be22-c30204ce3424",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_fail(chk_desc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebe93393-6fa9-40f7-a0ec-80c49dc8a7bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def _has_no_slug(d): \n",
-    "    if 'slug' in d['mdseo-ignore']: return False\n",
-    "    else: return 'slug' not in d\n",
-    "\n",
-    "@call_parse\n",
-    "def chk_slug(srcdir:str='.', # directory of files to check\n",
-    "            ):\n",
-    "    \"Check if docs do not have the field `slug` in their front matter. Ignore with front matter `mdseo-ignore: [slug]`\"\n",
-    "    return _checker(_has_no_slug, \"do not have the field `slug` in their front matter\", srcdir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe9a78b3-42c6-464e-bd02-0c09b3c9cd1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_fail(chk_slug)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d53374c5-c0ca-4f36-947b-1c7fc28115be",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def _slug_len(d, n): \n",
-    "    if 'slug' in d['mdseo-ignore']: return False\n",
-    "    else: return len(d.get('slug', '')) > n\n",
-    "\n",
-    "@call_parse\n",
-    "def chk_slug_len(srcdir:str='.', # directory of files to check\n",
-    "                 n=45 # max number of characters for slug\n",
-    "            ):\n",
-    "    \"Check if docs have a `slug` field in their front matter that is less than `n` characters. Ignore with front matter `mdseo-ignore: [slug]`\"\n",
-    "    return _checker(partial(_slug_len, n=n), f\"have `slug` in their front matter that is greater than {n} characters\", srcdir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cbc20a60-fe8d-4a86-9a5c-5b9093cf8a7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_fail(chk_slug_len)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73daf8d2-04cb-4cb3-93a4-54d79b7f41a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def _has_no_img(d): \n",
-    "    if 'image' in d['mdseo-ignore'] or 'img' in d['mdseo-ignore']: return False\n",
-    "    return 'image' not in d\n",
-    "\n",
-    "@call_parse\n",
-    "def chk_img(srcdir:str='.', # directory of files to check\n",
-    "            ):\n",
-    "    \"Check if docs do not have the field `image` in their front matter. Ignore with front matter `mdseo-ignore: [image]`\"\n",
-    "    return _checker(_has_no_img, \"do not have the field `image` in their front matter\", srcdir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5093ae8e-9c59-4e9a-a31e-c89854d0c632",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_fail(chk_img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de9ab18e-e57e-4fcf-8177-84dd2fd2932e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def _has_no_author(d): \n",
-    "    if 'authors' in d['mdseo-ignore'] or 'author' in d['mdseo-ignore']: return False\n",
-    "    return 'authors' not in d\n",
-    "\n",
-    "@call_parse\n",
-    "def chk_author(srcdir:str='.', # directory of files to check\n",
-    "            ):\n",
-    "    \"Check if docs do not have the field `authors` in their front matter. Ignore with front matter `mdseo-ignore: [authors]`\"\n",
-    "    return _checker(_has_no_img, \"do not have the field `authors` in their front matter\", srcdir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f6a2ee9-8971-40e9-b2a1-b8b475745a24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_fail(chk_author)"
+    "test_fail(partial(chk_fm, key='description'))\n",
+    "test_fail(partial(chk_fm, key='authors'))"
    ]
   },
   {
@@ -375,47 +366,6 @@
    "source": [
     "test_fail(chk_len)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5360dce2-f63f-4fc0-b501-d9db440d402b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#export\n",
-    "def _desc_len(d, lower ,upper):\n",
-    "    if 'description' in d['mdseo-ignore'] or 'desc' in d['mdseo-ignore']: return False\n",
-    "    desc = d.get('description', None)\n",
-    "    if desc: return len(desc) < lower or len(desc) > upper\n",
-    "    else: return False\n",
-    "\n",
-    "@call_parse\n",
-    "def chk_desc_len(\n",
-    "            n_lower:int=50, # the lower bound number of characters a document should contain\n",
-    "            n_upper:int=300, # the upper bound number of characters a document should contain\n",
-    "            srcdir:str='.', # directory of files to check\n",
-    "            ):\n",
-    "    \"Check if docs have a description that is not between `n_lower` and `n_upper` characters. Ignore with front matter `mdseo-ignore: [description]`\"\n",
-    "    func = partial(_desc_len, lower=n_lower, upper=n_upper)\n",
-    "    return _checker(func, f\"have a description that is not between {n_lower} and {n_upper} characters\", srcdir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "04ef0e7f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3a53c03-04d1-4e0a-bbf6-b7cb4f78d3da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
