--- a/index.ipynb
+++ b/index.ipynb
@@ -24,6 +24,7 @@
     "\n",
     "- [Installation](#installation)\n",
     "- [Usage](#usage)\n",
+    "- [Examples](#examples)\n",
     "- [Ignoring Checks](#ignoring-checks)\n",
     "    - [With Front Matter](#with-front-matter)\n",
     "    - [With The Keyword `mdseo-ignore-all`](#with-the-keyword-mdseo-ignore-all)\n"
@@ -77,31 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9802a378-2978-4fca-8ab8-eb14e2a070ed",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "usage: mdseo_img [-h] [--srcdir SRCDIR]\n",
-      "\n",
-      "Check if docs do not have the field `image` in their front matter. Ignore with\n",
-      "front matter `mdseo-ignore: [image]`\n",
-      "\n",
-      "optional arguments:\n",
-      "  -h, --help       show this help message and exit\n",
-      "  --srcdir SRCDIR  directory of files to check (default: .)\n"
-     ]
-    }
-   ],
-   "source": [
-    "!mdseo_img -h"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "c157e7a1-ff36-4945-8fc7-92d63150b5dc",
    "metadata": {},
    "outputs": [
@@ -109,16 +85,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: mdseo_len [-h] [--srcdir SRCDIR] n\n",
+      "usage: mdseo_len [-h] [--n N] [--srcdir SRCDIR]\n",
       "\n",
       "Check if docs contain less than `n` words. Ignore with front matter `mdseo-\n",
       "ignore: [length]`\n",
       "\n",
-      "positional arguments:\n",
-      "  n                minimum number of words a document should contain\n",
-      "\n",
       "optional arguments:\n",
       "  -h, --help       show this help message and exit\n",
+      "  --n N            minimum number of words a document should contain (default:\n",
+      "                   50)\n",
       "  --srcdir SRCDIR  directory of files to check (default: .)\n"
      ]
     }
@@ -130,31 +105,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbcc6f57-c8dd-4a49-9f36-eb68859e21de",
+   "id": "9802a378-2978-4fca-8ab8-eb14e2a070ed",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: mdseo_desc_len [-h] [--n_lower N_LOWER] [--n_upper N_UPPER]\n",
-      "                      [--srcdir SRCDIR]\n",
+      "usage: mdseo_chk_fm [-h] [--srcdir SRCDIR] [--minlen MINLEN] [--maxlen MAXLEN]\n",
+      "                    {description,slug,image,authors}\n",
       "\n",
-      "Check if docs have a description that is not between `n_lower` and `n_upper`\n",
-      "characters. Ignore with front matter `mdseo-ignore: [description]`\n",
+      "Check front matter for various rules.\n",
+      "\n",
+      "positional arguments:\n",
+      "  {description,slug,image,authors}  front matter field to check\n",
       "\n",
       "optional arguments:\n",
-      "  -h, --help         show this help message and exit\n",
-      "  --n_lower N_LOWER  the lower bound number of characters a document should\n",
-      "                     contain (default: 50)\n",
-      "  --n_upper N_UPPER  the upper bound number of characters a document should\n",
-      "                     contain (default: 300)\n",
-      "  --srcdir SRCDIR    directory of files to check (default: .)\n"
+      "  -h, --help                        show this help message and exit\n",
+      "  --srcdir SRCDIR                   directory of files to check (default: .)\n",
+      "  --minlen MINLEN                   the minimum character length allowed for the\n",
+      "                                    field\n",
+      "  --maxlen MAXLEN                   the maximum character length allowed for the\n",
+      "                                    field\n"
      ]
     }
    ],
    "source": [
-    "!mdseo_desc_len -h"
+    "!mdseo_chk_fm -h"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76ef83b3-0213-48f7-b389-25ba30e7fb6d",
+   "metadata": {},
+   "source": [
+    "## Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84593100-1336-41d9-a7f8-5797d6e556b3",
+   "metadata": {},
+   "source": [
+    "**Check that `description` is between 50 and 300 characters:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4666e019-e734-473c-abab-fa859a02463e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/hamel/opt/anaconda3/bin/mdseo_chk_fm\", line 33, in <module>\n",
+      "    sys.exit(load_entry_point('mdseo', 'console_scripts', 'mdseo_chk_fm')())\n",
+      "  File \"/Users/hamel/github/fastcore/fastcore/script.py\", line 113, in _f\n",
+      "    tfunc(**merge(args, args_from_prog(func, xtra)))\n",
+      "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 101, in chk_fm\n",
+      "    return _checker(partial(_min_len_err, key=key, n=minlen),\n",
+      "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 89, in _checker\n",
+      "    if fnames: raise Exception(f\"The following files {msg}:\\n\\t{files}\")\n",
+      "Exception: The following files have description in their front matter that is less than 50 characters:\n",
+      "\t./test_files/front_matter3.md\n"
+     ]
+    }
+   ],
+   "source": [
+    "!mdseo_chk_fm description --minlen 50 --maxlen 300"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec2d4a2a-c252-4100-a969-7fd05b831637",
+   "metadata": {},
+   "source": [
+    "**Check that the front matter `slug` exists:**"
    ]
   },
   {
@@ -167,19 +196,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: mdseo_slug [-h] [--srcdir SRCDIR]\n",
-      "\n",
-      "Check if docs do not have the field `slug` in their front matter. Ignore with\n",
-      "front matter `mdseo-ignore: [slug]`\n",
-      "\n",
-      "optional arguments:\n",
-      "  -h, --help       show this help message and exit\n",
-      "  --srcdir SRCDIR  directory of files to check (default: .)\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/hamel/opt/anaconda3/bin/mdseo_chk_fm\", line 33, in <module>\n",
+      "    sys.exit(load_entry_point('mdseo', 'console_scripts', 'mdseo_chk_fm')())\n",
+      "  File \"/Users/hamel/github/fastcore/fastcore/script.py\", line 113, in _f\n",
+      "    tfunc(**merge(args, args_from_prog(func, xtra)))\n",
+      "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 107, in chk_fm\n",
+      "    else: _checker(partial(_missing_fm, key=key), f\"do not have the field `{key}` in their front matter\", srcdir)\n",
+      "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 89, in _checker\n",
+      "    if fnames: raise Exception(f\"The following files {msg}:\\n\\t{files}\")\n",
+      "Exception: The following files do not have the field `slug` in their front matter:\n",
+      "\t./CONTRIBUTING.md\n",
+      "\t./test_files/false_fm2.md\n",
+      "\t./test_files/false_fm.md\n",
+      "\t./test_files/test_docs.md\n"
      ]
     }
    ],
    "source": [
-    "!mdseo_slug -h"
+    "!mdseo_chk_fm slug"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3d24add-7a9f-4cce-a4f1-4a84088a1946",
+   "metadata": {},
+   "source": [
+    "**Check that the front matter `slug` is no longer than 45 characters:**"
    ]
   },
   {
@@ -192,20 +235,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: mdseo_slug_len [-h] [--srcdir SRCDIR] [--n N]\n",
-      "\n",
-      "Check if docs have a `slug` field in their front matter that is less than `n`\n",
-      "characters. Ignore with front matter `mdseo-ignore: [slug]`\n",
-      "\n",
-      "optional arguments:\n",
-      "  -h, --help       show this help message and exit\n",
-      "  --srcdir SRCDIR  directory of files to check (default: .)\n",
-      "  --n N            max number of characters for slug (default: 45)\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/hamel/opt/anaconda3/bin/mdseo_chk_fm\", line 33, in <module>\n",
+      "    sys.exit(load_entry_point('mdseo', 'console_scripts', 'mdseo_chk_fm')())\n",
+      "  File \"/Users/hamel/github/fastcore/fastcore/script.py\", line 113, in _f\n",
+      "    tfunc(**merge(args, args_from_prog(func, xtra)))\n",
+      "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 104, in chk_fm\n",
+      "    return _checker(partial(_max_len_err, key=key, n=maxlen),\n",
+      "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 89, in _checker\n",
+      "    if fnames: raise Exception(f\"The following files {msg}:\\n\\t{files}\")\n",
+      "Exception: The following files have slug in their front matter that is greater than 45 characters:\n",
+      "\t./test_files/front_matter_test_docs.md\n"
      ]
     }
    ],
    "source": [
-    "!mdseo_slug_len -h"
+    "!mdseo_chk_fm slug --maxlen 45"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3dbe909-5180-463c-8ae3-877c55828e25",
+   "metadata": {},
+   "source": [
+    "**Check that the front matter `authors` exists:**"
    ]
   },
   {
@@ -218,19 +271,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: mdseo_author [-h] [--srcdir SRCDIR]\n",
-      "\n",
-      "Check if docs do not have the field `authors` in their front matter. Ignore with\n",
-      "front matter `mdseo-ignore: [authors]`\n",
-      "\n",
-      "optional arguments:\n",
-      "  -h, --help       show this help message and exit\n",
-      "  --srcdir SRCDIR  directory of files to check (default: .)\n"
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/hamel/opt/anaconda3/bin/mdseo_chk_fm\", line 33, in <module>\n",
+      "    sys.exit(load_entry_point('mdseo', 'console_scripts', 'mdseo_chk_fm')())\n",
+      "  File \"/Users/hamel/github/fastcore/fastcore/script.py\", line 113, in _f\n",
+      "    tfunc(**merge(args, args_from_prog(func, xtra)))\n",
+      "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 107, in chk_fm\n",
+      "    else: _checker(partial(_missing_fm, key=key), f\"do not have the field `{key}` in their front matter\", srcdir)\n",
+      "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 89, in _checker\n",
+      "    if fnames: raise Exception(f\"The following files {msg}:\\n\\t{files}\")\n",
+      "Exception: The following files do not have the field `authors` in their front matter:\n",
+      "\t./CONTRIBUTING.md\n",
+      "\t./test_files/front_matter2.md\n",
+      "\t./test_files/false_fm2.md\n",
+      "\t./test_files/front_matter_test_docs.md\n",
+      "\t./test_files/false_fm.md\n",
+      "\t./test_files/test_docs.md\n"
      ]
     }
    ],
    "source": [
-    "!mdseo_author -h"
+    "!mdseo_chk_fm authors"
    ]
   },
   {
