--- a/core.ipynb
+++ b/core.ipynb
@@ -268,11 +268,11 @@
     "#export\n",
     "def _min_len_err(d, key, n):\n",
     "    if _intersect(d, key): return False\n",
-    "    else: return key in d and len(d['key']) < n # return true if it is less than n length\n",
+    "    else: return key in d and len(d[key]) < n # return true if it is less than n length\n",
     "\n",
     "def _max_len_err(d, key, n):\n",
     "    if _intersect(d, key): return False\n",
-    "    else: return key in d  and len(d.get(key, '')) > n #return true if greater than n length\n",
+    "    else: return key in d and len(d[key]) > n #return true if greater than n length\n",
     "\n",
     "def _checker(func, msg:str, srcdir:str):\n",
     "    fnames = meta_list(srcdir).filter(func).attrgot('fname')\n",
