--- a/core.ipynb
+++ b/core.ipynb
@@ -194,11 +194,11 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "fm_map = {'description':['desc', 'description'],\n",
-    "          'slug': ['slug'],\n",
-    "          'image': ['image', 'img'],\n",
-    "          'authors': ['authors', 'author']}\n",
-    "_en = str_enum('_en', *fm_map.keys())"
+    "alias_map = {'description':['desc'],\n",
+    "             'slug': [],\n",
+    "             'image': ['img'],\n",
+    "             'authors': ['author']}\n",
+    "_en = str_enum('_en', *alias_map.keys())"
    ]
   },
   {
@@ -209,7 +209,7 @@
    "outputs": [],
    "source": [
     "#export\n",
-    "def _intersect(d, key): return set(d['mdseo-ignore']).intersection(set(fm_map[key]))\n",
+    "def _intersect(d, key): return set(d['mdseo-ignore']).intersection(set(alias_map.get(key, []) + [key]))\n",
     "\n",
     "def _missing_fm(d, key):\n",
     "    if _intersect(d, key): return False\n",
@@ -303,6 +303,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3c166b8a-e8c3-4aba-b726-b076affb2afd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hasattr(_en, 'authors')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bf130cc9-3fb3-4010-b8ac-1d317bb47d64",
    "metadata": {},
    "outputs": [],
@@ -315,7 +336,7 @@
     "           maxlen:int=None  #the maximum character length allowed for the field\n",
     "          ):\n",
     "    \"Check front matter for various rules.\"\n",
-    "    if key not in fm_map: raise Exception(f'No rule exists for {key}')\n",
+    "    if not hasattr(_en, key): raise Exception(f'No rule exists for {key}')\n",
     "    if minlen:\n",
     "        return _checker(partial(_min_len_err, key=key, n=minlen), \n",
     "                        f\"have the field `{key}` in their front matter that is less than {minlen} characters\", srcdir)\n",
@@ -323,7 +344,7 @@
     "        return _checker(partial(_max_len_err, key=key, n=maxlen), \n",
     "                        f\"have the field `{key}` in their front matter that is greater than {maxlen} characters\", srcdir)\n",
     "    \n",
-    "    else: _checker(partial(_missing_fm, key=key), f\"do not have the field `{key}` in their front matter\", srcdir)"
+    "    _checker(partial(_missing_fm, key=key), f\"do not have the field `{key}` in their front matter\", srcdir)"
    ]
   },
   {
