--- a/index.ipynb
+++ b/index.ipynb
@@ -169,7 +169,7 @@
       "    return _checker(partial(_min_len_err, key=key, n=minlen),\n",
       "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 89, in _checker\n",
       "    if fnames: raise Exception(f\"The following files {msg}:\\n\\t{files}\")\n",
-      "Exception: The following files have description in their front matter that is less than 50 characters:\n",
+      "Exception: The following files have the field `description` in their front matter that is less than 50 characters:\n",
       "\t./test_files/front_matter3.md\n"
      ]
     }
@@ -202,7 +202,7 @@
       "  File \"/Users/hamel/github/fastcore/fastcore/script.py\", line 113, in _f\n",
       "    tfunc(**merge(args, args_from_prog(func, xtra)))\n",
       "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 107, in chk_fm\n",
-      "    else: _checker(partial(_missing_fm, key=key), f\"do not have the field `{key}` in their front matter\", srcdir)\n",
+      "    _checker(partial(_missing_fm, key=key), f\"do not have the field `{key}` in their front matter\", srcdir)\n",
       "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 89, in _checker\n",
       "    if fnames: raise Exception(f\"The following files {msg}:\\n\\t{files}\")\n",
       "Exception: The following files do not have the field `slug` in their front matter:\n",
@@ -244,7 +244,7 @@
       "    return _checker(partial(_max_len_err, key=key, n=maxlen),\n",
       "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 89, in _checker\n",
       "    if fnames: raise Exception(f\"The following files {msg}:\\n\\t{files}\")\n",
-      "Exception: The following files have slug in their front matter that is greater than 45 characters:\n",
+      "Exception: The following files have the field `slug` in their front matter that is greater than 45 characters:\n",
       "\t./test_files/front_matter_test_docs.md\n"
      ]
     }
@@ -277,7 +277,7 @@
       "  File \"/Users/hamel/github/fastcore/fastcore/script.py\", line 113, in _f\n",
       "    tfunc(**merge(args, args_from_prog(func, xtra)))\n",
       "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 107, in chk_fm\n",
-      "    else: _checker(partial(_missing_fm, key=key), f\"do not have the field `{key}` in their front matter\", srcdir)\n",
+      "    _checker(partial(_missing_fm, key=key), f\"do not have the field `{key}` in their front matter\", srcdir)\n",
       "  File \"/Users/hamel/github/mdseo/mdseo/core.py\", line 89, in _checker\n",
       "    if fnames: raise Exception(f\"The following files {msg}:\\n\\t{files}\")\n",
       "Exception: The following files do not have the field `authors` in their front matter:\n",
